--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                     <span class="heading-primary-main">Outdoors</span>
                     <span class="heading-primary-sub">is where life happens</span>
                 </hi>
+
+                <a href="#" class="btn btn-white btn-animated">Discover Our Tours</a>
             </div>
 
         </header>
